apply spotless plugin